syntax = "proto3";

package ultpb;

import "asset.proto";

// every operation is related to a specific account and 
// each transaction could contain one or more operations
enum OpType {
  CREATE_ACCOUNT = 0;
  PAYMENT = 1;
}

// operation
message Op {
  // operation type of this transaction
  OpType OpType = 1;
  // operation details in wire format
  bytes Data = 2;
}

// transaction
message Tx {
  // the source account for sending asset to the new account
  string AccountID = 1;
  // fee to pay
  uint64 Fee = 2;
  // extra note about the transaction
  string Note = 3;
  // unique transaction sequence number
  uint64 SequenceNumber = 4;
  // list of operations
  repeated Op OpList = 5;
}

message TxList {
  // hash of previous closed ledger header
  string PrevLedgerHash = 1;
  // list of transactions
  repeated Tx Txs = 2;  
}

// create a new account by sending asset to it
message CreateAccountOp {
  // destination account
  string AccountID = 1;
  // initial balance in ULUs
  uint64 Balance = 2;
}

// peer to peer payment
message PaymentOp {
  // destination account of the payment
  string AccountID = 1;
  // asset type of payment
  AssetType AssetType = 2;
  // amount of payment in specified asset type
  int64 Amount = 3;
}
